force-app/main/default/objects/Mentee__c.object
<CustomObject>
    <description>This object contains the mentee application.</description>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>This lists the status of the mentee application.</description>
        <inlineHelpText>This lists the status of the mentee application.</inlineHelpText>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentee_Name__c</fullName>
        <formula>Mentee__r.FirstName + &apos; &apos; + Mentee__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mentees</relationshipLabel>
        <relationshipName>Mentees_Mentee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentor_Approval_Notes__c</fullName>
        <defaultValue>&quot;I&apos;m looking forward to meeting you!&quot;</defaultValue>
        <description>This field contains any notes the mentor wants to send the newly approved mentee.</description>
        <inlineHelpText>Use this field to send your recently approved mentee a message like &quot;Does Tuesday work to meet?&quot;</inlineHelpText>
        <label>Mentor Approval Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mentor_Email__c</fullName>
        <formula>Mentor__r.CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor_Name__c</fullName>
        <formula>Mentor__r.CreatedBy.FirstName +  Mentor__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <description>This is the description of the Job Shadow Opportunity.</description>
        <inlineHelpText>This is the description of the Job Shadow Opportunity.</inlineHelpText>
        <label>Mentor</label>
        <referenceTo>Mentor__c</referenceTo>
        <relationshipLabel>Mentees</relationshipLabel>
        <relationshipName>Mentees_Mentor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_Decline__c</fullName>
        <defaultValue>&quot;Thank you for your request but unfortunately I&apos;m not able to mentor you at this time.&quot;</defaultValue>
        <description>This offers the opportunity to send notes to the mentee requester who was declined.</description>
        <inlineHelpText>This offers the opportunity to send notes to the mentee requester who was declined.</inlineHelpText>
        <label>Reason for Decline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topics_of_Interest__c</fullName>
        <description>This is where the mentee applicant can list the various areas they would like to discuss with the mentor.</description>
        <inlineHelpText>Please list any topics you specifically like to discuss with the potential mentor.</inlineHelpText>
        <label>Topics of Interest</label>
        <type>TextArea</type>
    </fields>
    <label>Mentee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MENTEE-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>